# django-blog

./: .env  Makefile  db.sqlite3  pyproject.toml
django_blog/: settings.py  urls.py  views.py
django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
django_blog/article/migrations/: 0001_initial.py
django_blog/article/templates/articles/: create.html  index.html  show.html  update.html
django_blog/templates/: about.html  base.html  index.html
