[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["eugene <e.u.panin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
